# rp2040-pd-sniffer

./: .gitmodules  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build.yml  main.yml
docs/: license_investigation.md
hw/: README.md  rp2040-usb-pd.kicad_pcb  rp2040-usb-pd.kicad_prl  rp2040-usb-pd.kicad_pro  rp2040-usb-pd.kicad_sch
src/: main.c
src/hal/: hal.h
src/hal/pico/: CMakeLists.txt  hal_pico.c
src/hal/stm32/: CMakeLists.txt  hal_stm32.c
src/mitm/: CMakeLists.txt  main.c
src/pd_library/: CMakeLists.txt  pd_common.c  pd_common.h  pd_library.c  pd_library.h  pd_mitm.c  pd_mitm.h  pd_phy.c  pd_phy.h  pd_receiver.pio  pd_sink.c  pd_sink.h  pd_source.c  pd_source.h
src/sink/: CMakeLists.txt  main.c  pd_transmitter.pio
src/sniffer/: CMakeLists.txt  main.c  pd_sniffer.pio
src/source/: CMakeLists.txt  main.c
src/test_firmware/: CMakeLists.txt  README.md  pinger.c  pinger_logic.c  pinger_logic.h  ponger.c  ponger_logic.c  ponger_logic.h  sink_tester.c  sink_tester_logic.c  sink_tester_logic.h  source_emulator.c  source_emulator_logic.c  source_emulator_logic.h  test_firmware_common.c  test_firmware_common.h
test/: CMakeLists.txt  main.c  test_crc32.c  test_data.c  test_data.h  test_decoder.c  test_dma_receiver.c  test_encoder.c  test_hal_dma.c  test_header_builder.c  test_mitm_logic.c  test_pd_sink.c  test_pinger_logic.c  test_ponger_logic.c  test_sink_tester_logic.c  test_source_emulator_logic.c  test_source_logic.c
test/hardware/: pio.h
test/pico/: stdlib.h
