cmake_minimum_required(VERSION 3.13)

option(NATIVE_BUILD "Build for native target (PC)" OFF)
set(TARGET_PLATFORM "pico" CACHE STRING "Target hardware platform (pico or stm32)")

if(NATIVE_BUILD)
    # For native build, we only build the tests
    project(rp2040-usb-pd-sniffer-tests C CXX)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_C_STANDARD 11)
    add_compile_definitions(NATIVE_BUILD)
    add_subdirectory(src/pd_library)
    add_subdirectory(src/sink)
    add_subdirectory(src/hal/pico)
    add_subdirectory(src/test_firmware)
    enable_testing()
    add_subdirectory(test)
else()
    # For pico build, we build the firmware
    if(TARGET_PLATFORM STREQUAL "pico")
        include(pico-sdk/pico_sdk_init.cmake)
    endif()
    project(rp2040-usb-pd-sniffer C CXX ASM)
    if(TARGET_PLATFORM STREQUAL "pico")
        pico_sdk_init()
    endif()

    add_subdirectory(src/pd_library)
    add_subdirectory(src/sniffer)
    add_subdirectory(src/sink)
    add_subdirectory(src/mitm)
    add_subdirectory(src/test_firmware)
    add_subdirectory(src/hal/${TARGET_PLATFORM} ${CMAKE_BINARY_DIR}/hal)
endif()
